<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.SwipeRefreshLayout
    android:id="@+id/swiperefreshUserActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#c2fcfcfc"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:addStatesFromChildren="true"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <include
            layout = "@layout/action_bar"
            android:id="@+id/app_bar">
        </include>

        <TextView
            android:id="@+id/textViewNewUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/relativeLayout3"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="Benutzer erstellen"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <Button
            android:id="@+id/buttonNewUser"
            android:layout_width="222dp"
            android:layout_height="50dp"
            android:layout_alignTop="@+id/textViewNewUser"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:background="@drawable/userbuttons_background"
            android:drawableLeft="@drawable/ic_add_user"
            android:text="Hinzufügen"
            android:textColor="#FFFFFF" />

        <RelativeLayout
            android:id="@+id/relativeLayout3"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/app_bar"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:background="@drawable/border"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="16dp">

            <TextView
                android:id="@+id/textViewInfoUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="18dp"
                android:text="Benutzerdaten"
                android:textColor="#000000"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/textViewInFoPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/buttonPassword"
                android:layout_alignBottom="@+id/buttonPassword"
                android:layout_alignStart="@+id/textViewInfoName"
                android:text="Passwort:  "
                android:textColor="#000000"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonPassword"
                android:layout_width="222dp"
                android:layout_height="50dp"
                android:layout_alignStart="@+id/editTextEMail"
                android:layout_below="@+id/editTextEMail"
                android:layout_marginTop="18dp"
                android:layout_marginBottom="18dp"
                android:layout_marginRight="16dp"
                android:background="@drawable/userbuttons_background"
                android:drawableLeft="@drawable/ic_userpassword"
                android:text="Passwort"
                android:textColor="#FFFFFF" />

            <EditText
                android:id="@+id/editTextEMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textViewInfoEMail"
                android:layout_alignBottom="@+id/textViewInfoEMail"
                android:layout_alignStart="@+id/editTextName"
                android:ems="10"
                android:layout_marginRight="16dp"
                android:inputType="textPersonName"
                android:text="e-mail" />

            <TextView
                android:id="@+id/textViewInfoEMail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textViewInfoName"
                android:layout_below="@+id/editTextName"
                android:layout_marginTop="28dp"
                android:text="E-Mail:  "
                android:textColor="#000000"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textViewInfoName"
                android:layout_alignBottom="@+id/textViewInfoName"
                android:layout_toEndOf="@+id/textViewInFoPassword"
                android:ems="10"
                android:inputType="textPersonName"
                android:text="Name" />

            <TextView
                android:id="@+id/textViewInfoName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textViewInfoUser"
                android:layout_marginStart="20dp"
                android:layout_marginTop="21dp"
                android:text="Name:  "
                android:textColor="#000000"
                android:textSize="20sp" />
        </RelativeLayout>

    </RelativeLayout>

</android.support.v4.widget.SwipeRefreshLayout>